2011-04-21  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Adele Peterson.

        REGRESSION (r83386): Typing in WSJ.com search field doesn't clear placeholder text
        https://bugs.webkit.org/show_bug.cgi?id=59053

        * fast/events/shadow-boundary-crossing-expected.txt: Updated expected results.
        * fast/events/shadow-boundary-crossing.html: Added new sub-test.
2011-04-21  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adele Peterson.

        REGRESSION (r83386): Typing in WSJ.com search field doesn't clear placeholder text
        https://bugs.webkit.org/show_bug.cgi?id=59053

        Turns out, the relatedTarget of an event could be also an ancestor of an event,
        not just its parent. Duh.

        * dom/EventDispatcher.cpp:
        (WebCore::EventDispatcher::adjustToShadowBoundaries): Changed to use shadowHost
            explicitly.

Canonical link: https://commits.webkit.org/74322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84587 268f45cc-cd09-0410-ab3c-d52691b4dbfc