Source/WebCore/dom/EventDispatcher.cpp
@@ -163,8 +163,8 @@ PassRefPtr<EventTarget> EventDispatcher::adjustToShadowBoundaries(PassRefPtr<Nod
     }
 
     if (!diverged) {
-        // The relatedTarget is a parent or shadowHost of the target.
-        if (isShadowRootOrSVGShadowRoot(m_node.get()))
+        // The relatedTarget is an ancestor or shadowHost of the target.
+        if (m_node->shadowHost() == relatedTarget.get())
             lowestCommonBoundary = m_ancestors.begin();
     } else if ((*firstDivergentBoundary) == m_node.get()) {
         // Since ancestors does not contain target itself, we must account
